Java 20625 (#14213)
* [JAVA-20625] Opened packages + disabled karate integration until upgrade

* [JAVA-20625] Formatting